Restarted to create website that fits all devices - Added boxes to work in

--- a/index.html
+++ b/index.html
@@ -8,17 +8,58 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Header-->
     <header>
-        <p1 class="logo">Header Logo</p1>
-            <p1 class="links">header link one</p1>
-            <p1 class="links">header link two</p1>
-            <p1 class="links">header link three</p1>
+        <div class="inner-column">
+        <h1>Header Logo</h1>
+        </div>
     </header>
-    <hero>
-        <h1 class="hero">This Website is Awesome</h1>
-        <p1 class="links">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p1>
-        <button>Sign up</button>
-        <img alt="this is a placeholder for an image">
-    </hero>
+    <!--Main Content-->
+    <main>
+    <!--Hero-->
+        <section>
+            <div class="inner-column">
+                
+                <div class="graphic">
+                    <div class="hero-text">
+                        <h1>This website is awesome.</h1>
+
+                        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    
+                        <a href="#">Sign Up</a>
+                    </div>
+
+                    <picture>
+                        <img src="assets/placeholder-image.png" alt="This is the placeholder for an image">
+                    </picture>
+                </div>
+
+            </div>
+        </section>
+    <!--Information Images-->
+        <section>
+            <div class="inner-column">
+                <h2>Information</h2>
+            </div>
+        </section>
+    <!--Quote-->
+        <section>
+            <div class="inner-column">
+                <h2>Quotes</h2>
+            </div>
+        </section>
+    <!--Sign Up-->
+        <section>
+            <div class="inner-column">
+                <h2>Sign Up</h2>
+            </div>
+        </section>
+    </main>
+    <!--Footer-->
+    <footer>
+        <div class="inner-column">
+            <h2>Footer</h1>
+        </div>
+    </footer>    
 </body>
 </html>
