Finalised header and information box

--- a/index.html
+++ b/index.html
@@ -19,29 +19,28 @@
     <!--Hero-->
         <section class="intro">
             <div class="inner-column">
-                
                 <div class="graphic">
-
                     <picture>
                         <img src="assets/placeholder-image.png" alt="This is the placeholder for an image">
                     </picture>
-
                     <div class="hero-text">
                         <h1 class="hero">This website is awesome</h1>
-
                         <p class="small-hero">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                    
                         <a class='button' href="#">Sign Up</a>
                     </div>
-
                 </div>
-
             </div>
         </section>
     <!--Information Images-->
         <section>
             <div class="inner-column">
-                <h2>Information</h2>
+                <h2 class="information">Some random informaton.</h2>
+                <div class="square">    
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
         </section>
     <!--Quote-->
