--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--Information Images-->
         <section>
             <div class="inner-column">
-                <h2 class="information">Some random informaton.</h2>
+                <h2 class="information">Some random information.</h2>
                 <div class="square">    
                     <div></div>
                     <div></div>
@@ -44,22 +44,29 @@
             </div>
         </section>
     <!--Quote-->
-        <section>
+        <section class="quote">
             <div class="inner-column">
-                <h2>Quotes</h2>
+                <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="quote-author">- Thor, God of Thunder</p>
             </div>
         </section>
     <!--Sign Up-->
-        <section>
+        <section class="call-to-action">
             <div class="inner-column">
-                <h2>Sign Up</h2>
+                <div class="call-to-action-container">
+                    <div class="call-to-action-card">
+                        <h3 class="call-to-action-header">Call to action! It's time!</h3>
+                        <p class="call-to-action-text">Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <a class='sign-up-button' href="#">Sign Up</a>
+                </div>
             </div>
         </section>
     </main>
     <!--Footer-->
     <footer>
         <div class="inner-column">
-            <h2>Footer</h1>
+            <h2 class="footer-text">Copyright Matthew Stacey 2022</h2>
         </div>
     </footer>    
 </body>
